# GPU-Merkle-Patricia-Trie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  case_study.sh  convert_to_csv.sh  deploy.sh  do_all_experiments.sh  do_atomic.sh  do_bulk.sh  do_model_experiments.sh  do_rw_experiments.sh  do_sup_experiments.sh  download_data.sh  geth_install_libgmpt.sh  go.work  memalloc.sh  model_fitting.sh  profile.sh  runx.sh  txn_address.sh  ycsb_cpu.sh  zipf_exp.sh
include/angela/: angela_mpt.cuh  angela_mpt_kernel.cuh  angela_node.cuh  hash_update_kernel.cuh
include/hash/: batch_mode_hash.cuh  cpu_hash.h  gpu_hash.cuh  gpu_hash_kernel.cuh  tree_mode_hash.cuh
include/mpt/: cpu_mpt.h  gpu_mpt.cuh  gpu_mpt_kernel.cuh  mpt.h  node.cuh
include/util/: cpu_hash.h  gpu_hash.cuh  gpu_utils.cuh  hash_util.cuh  pool_allocator.cuh  timer.h  tree_mode_hash.cuh  util.cuh  util.h
mpt-no-compress/: CMakeLists.txt
mpt-no-compress/include/hash/: batch_mode_hash.cuh  cpu_hash.h
mpt-no-compress/include/mpt/: gpu_mpt.cuh  gpu_mpt_kernel.cuh  node.cuh
mpt-no-compress/include/util/: timer.h  util.cuh
mpt-no-compress/test/: hash_SIMD.cu  perf_test.cu
mpt-with-compress/: CMakeLists.txt  do_all_experiments.sh
mpt-with-compress/include/bench/: ethtxn.cuh  keytype.cuh  wiki.cuh  ycsb.cuh
mpt-with-compress/include/btree/: cpu_btree.cuh  cpu_node.cuh  gpu_btree_olc.cuh  gpu_btree_olc_kernels.cuh  gpu_node_olc.cuh
mpt-with-compress/include/hash/: batch_mode_hash.cuh  cpu_hash.h  gpu_hash.cuh  gpu_hash_kernel.cuh
mpt-with-compress/include/mpt/: cpu_mpt.cuh  cpu_mpt_kernel.cuh  gpu_mpt.cuh  gpu_mpt_kernels.cuh  node.cuh  um_mpt.cuh
mpt-with-compress/include/skiplist/: cpu_skiplist.cuh  gpu_skiplist.cuh  gpu_skiplist_kernel.cuh  node.cuh
mpt-with-compress/include/util/: allocator.cuh  dynamic_allocator.cuh  experiments.cuh  lock.cuh  rlp.cuh  threadpool.cuh  timer.cuh  utils.cuh
mpt-with-compress/lib/: libgmpt.cu  libgmpt.h
mpt-with-compress/test/: allocator.cu  batch_hash.cu  btree.cu  cpu_parallel_experiments.cu  exception.cu  experiments.cu  hash.cu  read_address.cu  skiplist.cu  thread.cu  trie.cu  utils.cu  verify.cu
src/: perf_test.cpp
test/: hash_SIMD.cu  hash_perf.cu  hash_test.cu  onepass_test.cu  perf_test.cpp  perf_test.cu  perf_test_with_hash.cu  single_node_test.cu  test_hash.cpp
